--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/appleicon.png" rel="apple-touch-icon">
 
   <!-- Custom fonts for this template -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
   <link href="https://fonts.cdnfonts.com/css/monument-extended" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/proxima-nova-2" rel="stylesheet">
 
-  <link href="css/ankhmain.css?v=1.3" rel="stylesheet">
+  <link href="css/ankhmain.css?v=1.2" rel="stylesheet">
 
 </head>
 
