--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-4" data-aos="slide-down" data-aos-delay="200">
+        <div class="col-md-4 mb-4" data-aos="slide-up" data-aos-delay="200">
           <div class="p-5">
             <div class="projects text-center projects-fusionara">
               <h2 class="pt-5 mt-5">Fusionara</h2>
@@ -348,7 +348,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-4" data-aos="slide-down" data-aos-delay="300">
+        <div class="col-md-4 mb-4" data-aos="slide-up" data-aos-delay="400">
           <div class="p-5">
             <div class="projects text-center projects-kandyland">
               <h2 class="pt-5 mt-5">KandyLand</h2>
@@ -356,7 +356,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-4" data-aos="slide-down" data-aos-delay="400">
+        <div class="col-md-4 mb-4" data-aos="slide-up" data-aos-delay="600">
           <div class="p-5">
             <div class="projects text-center projects-slickcity">
               <h2 class="pt-5 mt-5">Slick City</h2>
@@ -465,9 +465,9 @@
 
 
 
-<footer class="text-light" data-aos="fade-up">
+<footer class="text-light" >
 
-  <div class="container">
+  <div class="container" data-aos="fade-up">
     <div class="col-md-10 mx-auto my-5">
       <div class="text-left">
         <h2 class="display-6 mb-0">Leicester, UK</h2>
@@ -478,7 +478,7 @@
     </div>
   </div>
 
-  <div class="container mt-5 pt-5">
+  <div class="container mt-5 pt-5" data-aos="fade-up">
       <div class="col-md-10 mx-auto mt-5 pb-3" style="border-bottom:3px solid #fff;">
         <div class="row">
           <div class="col-md-6">
